fix 'autocomplete' z-index and 'term' directive param

--- a/src/assets/scss/_autocomplete.scss
+++ b/src/assets/scss/_autocomplete.scss
@@ -3,8 +3,15 @@ $this: ".aph.autocomplete";
 #{$this} {
     position: relative;
 
+    &__input,
+    &__input.aph.form__control {
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius : 0;
+    }
+
     &__list {
         position  : absolute;
+        z-index   : 1;
         overflow  : auto;
         overflow-x: hidden;
         width     : 100%;
